# customer-service-agent

./: .env.example  .gitignore  BUSINESS_PROCESS.md  CLAUDE.md  README.md  agent.py  pyproject.toml
backend/: .env.example  agent.py  api.py  main.py  pyproject.toml  requirements.txt
backend/prompts/: initial_prompt_inbound.j2  initial_prompt_outbound.j2  instructions_inbound.j2  instructions_outbound.j2  shared_context.j2
backend/scripts/: check_network.py  check_trunk_termination.py  check_twilio_config.py  check_twilio_logs.py  configure_trunk_for_australia.py  configure_voice_url.py  delete_dispatch_rules.py  fix_phone_number_trunk.py  fix_sip_uri.py  fix_trunk_ips_cli.sh  force_fix_phone_number.py  get_call_details.py  get_livekit_sip_uri.py  make_outbound_call.py  setup_livekit_telephony.py  test_create_sip_participant.py  test_livekit_sip_auth.py  test_sip_connection.py  test_sip_setup.py  test_sip_uri_formats.py  test_twilio_to_livekit.sh  update_inbound_trunk_ips.py
backend/services/: customer_service.py  outbound_call_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: SpeakingIndicator.tsx  TranscriptionDisplay.tsx
frontend/src/styles/: SpeakingIndicator.css  Transcription.css
livekit-telephony-templates/: dispatch_rule.json.template  inbound_trunk.json.template  outbound_trunk.json.template  participant.json.template
scripts/: make_outbound_call.py  setup_livekit_telephony.py
services/: outbound_call_service.py
